--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -32,3 +32,14 @@ body {
      position: absolute;
      z-index: -1;	
 }
+
+#project p{
+  font-variant: small-caps;
+}
+
+.project{
+  margin-left: 20px;
+  background-color: #D3E7E6;
+  padding: 20px;
+  width: 525px;
+}
