Lab 2 code submit

--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -36,10 +36,10 @@ body {
 #project p{
   font-variant: small-caps;
 }
-
+/*
 .project{
   margin-left: 20px;
   background-color: #D3E7E6;
-  padding: 20px;
-  width: 525px;
-}
+  padding: 15px;
+  width: 500px;
+}*/
